tests/typerel/tno_int_in_bool_context.nim
discard """
  errormsg: "type mismatch: got <int literal(1)> but expected 'bool'"
  line: 6
"""

if 1:
  echo "wtf?"
